--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -1,3 +1,20 @@
+/* @import './base/reset.css';
+@import './base/variables.css';
+@import './base/typography.css';
+
+@import './layouts/default-layout.css';
+
+@import './components/header.css';
+@import './components/search-bar.css';
+@import './components/vocabulary-card.css';
+
+@import './pages/home.css'; */
+
+@import './base/base.css';
+@import './components/header.css';
+@import './components/footer.css';
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -46,9 +63,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,10 +78,21 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+a,
+.green {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
+  padding: 3px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -77,3 +107,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    place-items: center;
+  }
+}
+
