Minimal style/structure header footer hero (#16)

--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -13,6 +13,7 @@
 @import './base/base.css';
 @import './components/header.css';
 @import './components/footer.css';
+@import './pages/home.css';
 
 
 :root {
