--- a/src/client/styles/home.css
+++ b/src/client/styles/home.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background: #d8e1d6cf;
+  background: var(--color-background-soft);
   padding: 3rem 1rem 2rem 1rem;
   height: 100%;
   flex: 1 auto;
