--- a/public/search-controls.css
+++ b/public/search-controls.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   padding-bottom: 10px;
+  flex-direction: column;
 }
 .search-sort label {
   color: var(--color-text-light-1);
