--- a/public/colors.css
+++ b/public/colors.css
@@ -7,12 +7,7 @@
   --black: #181818;
   --black-soft: #222222;
   --black-mute: #282828;
-
-  --indigo: #2c3e50;
-
   --gray-dark: #343A40;
-
-  --red: #961300;
 
   /* Buttons */
   --blue: #007BFF;
@@ -23,12 +18,14 @@
   --divider-dark-1: rgba(84, 84, 84, 0.65);
   --divider-dark-2: rgba(84, 84, 84, 0.48);
 
-  --color-text-light-1: var(--indigo);
+  --color-text-light-1: #2c3e50;
   --color-text-light-2: rgba(60, 60, 60, 0.66);
   --color-text-dark-1: var(--white);
   --color-text-dark-2: rgba(235, 235, 235, 0.64);
 
-    /* Semantic color variables for this project */
+  /* Semantic color variables for this project */
+  --red: #961300;
+
   --color-header-background: var(--red);
 
   --color-primary: var(--red);
@@ -45,5 +42,4 @@
   --color-button-hover: var(--blue-dark);
   --color-button-light: var(--color-text-light-2);
   --color-button-soft: var(--color-text-light-1); 
-
 }
